# vidascii

./: .gitignore  Cargo.toml  README.md
braille2img/: Cargo.toml
braille2img/src/: config.rs  lib.rs
vidascii_cli/: Cargo.toml
vidascii_cli/src/: console.rs  main.rs
vidascii_core/: Cargo.toml
vidascii_core/src/: img2braille.rs  lib.rs  tests.rs  utils.rs  vid2braille.rs
vidascii_core/src/braille2img/: config.rs  mod.rs
vidascii_core/src/img2braille/: dithering.rs  mod.rs
