[package]
name = "vidascii_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.21", features = ["derive", "unicode"]}
colored = "2.0.4"
indicatif = "0.17.6"
mime_guess = "2.0.4"
vidascii_core = { path="../vidascii_core" }
