[package]
name = "vidascii_cli"
version = "1.0.0"
edition = "2021"
authors = ["Ilingu"]
license = "MIT"
description = "Converts image or video to braille art"
readme = "../README.md"
repository = "https://github.com/Ilingu/vidascii"
homepage = "https://github.com/Ilingu/vidascii"
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.21", features = ["derive", "unicode"]}
colored = "2.0.4"
indicatif = "0.17.6"
mime_guess = "2.0.4"
vidascii_core = { path="../vidascii_core" }
