[package]
name = "vidascii_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
vid2img = "0.1.1"
braille2img = { path="../braille2img" }
home = "0.5.5"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
ffmpeg-next = "6.0.0"
scopeguard = "1.2.0"
