[package]
name = "vidascii_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
braille2img = { path="../braille2img" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
scopeguard = "1.2.0"
ffmpeg-sidecar = "0.4.1"
