[package]
name = "vidascii_core"
version = "1.0.0"
edition = "2021"
authors = ["Ilingu"]
license = "MIT"
description = "Converts image or video to braille art"
readme = "../README.md"
repository = "https://github.com/Ilingu/vidascii"
homepage = "https://github.com/Ilingu/vidascii"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
scopeguard = "1.2.0"
ffmpeg-sidecar = "0.4.1"
imageproc = "0.23.0"
rusttype = "0.9.3"